--- a/app/src/main/res/layout/ab_activity_settings.xml
+++ b/app/src/main/res/layout/ab_activity_settings.xml
@@ -22,7 +22,7 @@
         android:id="@+id/title"
         android:textSize="26sp"
         android:layout_marginStart="10dp"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="center"
         android:textColor="@android:color/white"
